# ANPRX-UK

./: .gitignore  gradle.properties  settings.gradle
.github/workflows/: android.yml  renovate.yml
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/opencv_anpr/: opencv_anpr.cpp
app/src/main/java/dev/robertpitt/anprX/: ANPRXApplication.java  Utils.java
app/src/main/java/dev/robertpitt/anprX/activities/MainActivity/: MainActivity.java
app/src/main/java/dev/robertpitt/anprX/activities/SettingsActivity/: SettingsActivity.java
app/src/main/java/dev/robertpitt/anprX/opencv/: IDetector.java  NumberplateDetectorV1.java  NumberplateDetectorV2.java  Utils.java
app/src/main/java/dev/robertpitt/anprX/opencv/pipeline/: HistogramEqualize.java  Step.java
app/src/main/java/dev/robertpitt/anprX/tesseract/: TesseractAPI.java  Utils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: arrays.xml  strings.xml
app/src/main/res/xml/: root_preferences.xml
gradle/wrapper/: gradle-wrapper.properties
